--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-MYSQL_DATABASE_HOST="localhost"
-MYSQL_DATABASE_PORT="27017"
-MYSQL_DATABASE="geolife"
-MYSQL_ROOT_PASSWORD="root_password"
-MYSQL_USER="group99"
-MYSQL_PASSWORD="group99_mongodb"
+MONGO_DATABASE_HOST="localhost"
+MONGO_DATABASE_PORT="27017"
+MONGO_INITDB_DATABASE="geolife"
+MONGO_INITDB_ROOT_USERNAME="root"
+MONGO_INITDB_ROOT_PASSWORD="root_password"
+MONGO_USER="group99"
+MONGO_PASSWORD="group99_mongodb"
