--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,10 +2,12 @@ version: '3.9'
 
 services:
   mongodb:
-    image: mongo:6.0.1
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile
     ports:
-      - 27017:27017
+      - "27017:27017"
     env_file:
       - ../.env
-    volumes:
-      - ./init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh:ro
+   # volumes:
+      #- ./init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh:ro
